--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <p class="text-muted">uma igreja muito bonita</p>
       </div>
     </center>
+        </section>
+        <section id"#videos">
     <center>
       <div class="travel_mainDiv">
     <img src="st2 (1).jpg">
@@ -58,6 +60,8 @@
     <p class="text-muted">um lugar de leitura e aprendizado</p>
       </div>
     </center>
+            </section>
+        <section id="trabalhos"
     <center>
       <div class="travel_mainDiv">
     <img src="st3 (1).jpg">
@@ -67,6 +71,7 @@
     <p class="text-muted">ondem acontecem as nossas palestras</p>
       </div>
     </center>
+    </section>
 
 </body>
 
