--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 competição interescolar de futebol</i></div>
             <div id="conquistasescola" class="colapse">
                 <div class="conquistas_text">
-                    <img src="sm2.jpg" class="img-responsive img-thumbnail">
+                    <img src="sm2 (1).jpg" class="img-responsive img-thumbnail">
                     <h5 class="text-success text-captalize">ficamos em segundo lugar na competição de futebol interescolar
                         <span class="glyphicon glyphicon-star"><span>
                             <span class="glyphicon glyphicon-star"><span>
@@ -84,6 +84,7 @@
                                    <span class="glyphicon glyphicon-star"><span>
                                    <span class="glyphicon glyphicon-star"><span>
                                        </h5>
+                                       </di>
               </div>
             </section>
     
