--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                    <span class="glyphicon glyphicon-star"><span>
                                    <span class="glyphicon glyphicon-star"><span>
                                        </h5>
-                                       </di>
+                                       </div>
               </div>
             </section>
     
